[tool.poetry]
name = "mihama"
version = "0.7.0"
description = "osv.dev API clone for on-premise usage"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiometer = "0.5.0"
arq = "^0.26.0"
elasticsearch = { extras = ["async"], version = "^8.14.0" }
elasticsearch-dsl = { extras = ["async"], version = "^8.14.0" }
fastapi = { extras = ["all"], version = "^0.111.0" }
gitpython = "^3.1.43"
gunicorn = "^22.0.0"
httpx = "^0.27.0"
loguru = "^0.7.2"
packageurl-python = "^0.15.2"
pydantic = "^2.8.2"
redis = { extras = ["hiredis"], version = "^4.6" }
returns = { extras = ["compatible-mypy"], version = "^0.23.0" }
semver = "^3.0.2"
typer = "^0.12.3"
uvicorn = { extras = ["standard"], version = "^0.30.1" }

[tool.poetry.group.dev.dependencies]
ci-py = "^1.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0"
pytest-docker = "^3.1.1"
pytest-mock = "^3.14"
pytest-randomly = "^3.15"
pyupgrade = "^3.16.0"
ruff = "^0.5.1"
types-requests = "2.31"
vcrpy = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.scripts]
mihama = "mihama.cli:app"

[tool.mypy]
plugins = ["pydantic.mypy", "returns.contrib.mypy.returns_plugin"]
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C",     # flake8-comprehensions
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "UP007", # non-pep604-annotation
    "W",     # pycodestyle warnings
]
ignore = ["E501"]
